modified structure of code and added component class RedirectIfAuthenticatedFilter